# syntax-analyzer-app

./: bun.lockb  index.html  package.json  tsconfig.json  vite.config.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: entities.rs  lib.rs  main.rs
src/types/: index.ts
